samples/_failures_safe/1761793162_316c91_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_86a7b8df.c: In function ‘main’:
./samples/SAFE/__tmp_86a7b8df.c:160:64: error: expected ‘)’ at end of input
  160 |                 int status = add_matrices(&mat1, &mat2, &result
      |                                          ~                     ^
      |                                                                )
./samples/SAFE/__tmp_86a7b8df.c:160:17: error: expected declaration or statement at end of input
  160 |                 int status = add_matrices(&mat1, &mat2, &result
      |                 ^~~
./samples/SAFE/__tmp_86a7b8df.c:160:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_86a7b8df.c:160:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_86a7b8df.c:160:17: error: expected declaration or statement at end of input
